# moodio

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SPEC.md  TEST_PLAN.md  UI_DESIGN_PROMPT.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: request_codex_review.py  request_copilot_review.py  sync_branch_on_session_start.py
.github/workflows/: request-codex-review.yml
docs/superpowers/plans/: 2026-04-22-moodio-backend-foundation.md
src/moodio/: __init__.py  cli.py  context_builder.py  executor.py  info.py  router.py  state_store.py  station_agent.py  voice.py
src/moodio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/moodio/api/: __init__.py  schemas.py  server.py
src/moodio/domain/: __init__.py  events.py  models.py  triggers.py
src/moodio/music/: __init__.py  providers.py  soundcloud.py
src/moodio/runtime/: __init__.py  control.py  in_memory.py  service.py
tests/: README.md
tests/contract/: test_api_schemas.py  test_event_schemas.py
tests/fixtures/: fake_context.py  fake_model.py  sample_data.py
tests/integration/: test_runtime_loop.py  test_server_http.py  test_server_ws.py
tests/unit/: test_action_schema.py  test_cli.py  test_context_builder.py  test_domain_models.py  test_info_providers.py  test_music_providers.py  test_router.py  test_state_store.py  test_voice_providers.py
